--- a/src/ledblink/CMakeLists.txt
+++ b/src/ledblink/CMakeLists.txt
@@ -5,3 +5,5 @@ add_executable(pico_display
 # pull in common dependencies
 target_link_libraries(pico_display pico_stdlib)
 
+# create map/bin/hex file etc.
+pico_add_extra_outputs(pico_display)
