--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,14 @@
 cmake_minimum_required(VERSION 3.12)
 
-set(ENV{PICO_SDK_PATH} "${CMAKE_SOURCE_DIR}/third_party/pico-sdk" )
+set(ENV{PICO_SDK_PATH} "${CMAKE_SOURCE_DIR}/third_party/pico-sdk")
 
 message(STATUS "*** dump start cmake variables ***")
 get_cmake_property(_variableNames VARIABLES)
+
 foreach(_variableName ${_variableNames})
         message(STATUS "${_variableName}=${${_variableName}}")
 endforeach()
+
 message(STATUS "*** dump end ***")
 
 # Pull in SDK (must be before project)
@@ -16,11 +18,12 @@ project(pico_examples C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
+# set(C)
 
 set(CMAKE_BINARY_DIR "${CMAKE_SOURCE_DIR}/bin")
 
-if (PICO_SDK_VERSION_STRING VERSION_LESS "1.3.0")
-    message(FATAL_ERROR "Raspberry Pi Pico SDK version 1.3.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
+if(PICO_SDK_VERSION_STRING VERSION_LESS "1.3.0")
+        message(FATAL_ERROR "Raspberry Pi Pico SDK version 1.3.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
 endif()
 
 # Initialize the SDK
@@ -30,10 +33,10 @@ add_compile_options(
         -O0
         -g
         -Wall
-        -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
+        -Wno-format # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
         -Wno-unused-function # we have some for the docs that aren't called
         -Wno-maybe-uninitialized
-        )
+)
 
 add_subdirectory(src/buttonInput)
 add_subdirectory(src/ledblink)
