--- a/src/tftDisplay/CMakeLists.txt
+++ b/src/tftDisplay/CMakeLists.txt
@@ -11,12 +11,12 @@ add_executable(${PROJECT_NAME}
 main.cpp
 )
 
-pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/st7789_lcd.pio)
+# pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/st7789_lcd.pio)
 
 target_sources(${PROJECT_NAME} PRIVATE main.cpp)
 
 # pull in common dependencies
-target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_pio hardware_interp)
+target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_pio hardware_interp hardware_spi)
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(${PROJECT_NAME})
