--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,4 @@ add_subdirectory(src/buttonInput)
 add_subdirectory(src/ledblink)
 add_subdirectory(src/serialComm)
 add_subdirectory(src/tftDisplay)
+add_subdirectory(src/epaperDisplay)
